--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "express": "~4.16.1",
     "express-async-handler": "^1.2.0",
     "express-validator": "^7.0.1",
-    "hashids": "^2.3.0",
     "http-errors": "~1.6.3",
     "mongoose": "^7.3.4",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "string-hashids": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
